--- a/doc/po/ja.po
+++ b/doc/po/ja.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: groonga-query-log 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-12 16:20+0900\n"
-"PO-Revision-Date: 2014-05-12 17:05+0900\n"
+"POT-Creation-Date: 2014-05-12 17:06+0900\n"
+"PO-Revision-Date: 2014-05-12 17:06+0900\n"
 "Last-Translator: Haruka Yoshihara <yoshihara@clear-code.com>\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
@@ -46,7 +46,10 @@ msgid ""
 "process query log by using groonga-query-log as a library. You can\n"
 "analyze your Groonga's queries and test with your Groonga's query log\n"
 "by using groonga-query-log as a tool."
-msgstr "groonga-query-logは[Groonga](http://groonga.org/ja/)のクエリログを処理するためのライブラリとツール群です。groonga-query-logをライブラリとして使うことでクエリログを処理するプログラムを書くことができます。ツールとして使うことで、使用しているGroongaのクエリを解析したり、クエリログを使ったテストを行うことができます。"
+msgstr ""
+"groonga-query-logは[Groonga](http://groonga.org/ja/)のクエリログを処理するためのライブラリとツール群です。"
+"groonga-query-logをライブラリとして使うことでクエリログを処理するプログラムを書くことができます。ツールとして使うことで、使用しているGro"
+"ongaのクエリを解析したり、クエリログを使ったテストを行うことができます。"
 
 #: ../../README.md:17
 msgid "## Install"
@@ -115,8 +118,10 @@ msgid ""
 "  * Japanese: [groonga-dev@lists.sourceforge.jp](http://lists.sourceforge.jp/m"
 "ailman/listinfo/groonga-dev)"
 msgstr ""
-"  * 英語: [groonga-talk@lists.sourceforge.net](https://lists.sourceforge.net/lists/listinfo/groonga-talk)\n"
-"  * 日本語: [groonga-dev@lists.sourceforge.jp](http://lists.sourceforge.jp/mailman/listinfo/groonga-dev)"
+"  * 英語: [groonga-talk@lists.sourceforge.net](https://lists.sourceforge.net/lis"
+"ts/listinfo/groonga-talk)\n"
+"  * 日本語: [groonga-dev@lists.sourceforge.jp](http://lists.sourceforge.jp/mailma"
+"n/listinfo/groonga-dev)"
 
 #: ../../README.md:62
 msgid "## Thanks"
@@ -1026,7 +1031,10 @@ msgid ""
 "results by old Groonga and new Groonga by\n"
 "`groonga-query-log-run-regression-test`. Test queries are read from\n"
 "query logs. You can use query logs on production environment as is."
-msgstr "`groonga-query-log-run-regression-test` はGroonga用のリグレッションテストツールです。Groongaをアップグレードするときに便利です。 `groonga-query-log-run-regression-test` を使って、古いGroongaと新しいGroongaで検索結果に差がないか調べることができます。テストに使うクエリーはクエリーログから読み込みます。本番環境のクエリーログをそのまま使うことができます。"
+msgstr ""
+"`groonga-query-log-run-regression-test` はGroonga用のリグレッションテストツールです。Groongaをアップグ"
+"レードするときに便利です。 `groonga-query-log-run-regression-test` を使って、古いGroongaと新しいGroong"
+"aで検索結果に差がないか調べることができます。テストに使うクエリーはクエリーログから読み込みます。本番環境のクエリーログをそのまま使うことができます。"
 
 #: ../../doc/text/run-regression-test.md:9
 msgid "## Flow"
@@ -1108,7 +1116,9 @@ msgstr ""
 msgid ""
 "Put database schema definitions to `schema/` directory. Each file must\n"
 "have `.grn` extension such as `ddl.grn`."
-msgstr "データベーススキーマの定義を `schema/` ディレクトリーに入れます。各ファイルは `ddl.grn` のように拡張子を `.grn` としなければいけません。"
+msgstr ""
+"データベーススキーマの定義を `schema/` ディレクトリーに入れます。各ファイルは `ddl.grn` のように拡張子を `.grn` としなければい"
+"けません。"
 
 #: ../../doc/text/run-regression-test.md:53
 msgid ""
@@ -1138,21 +1148,27 @@ msgstr ""
 msgid ""
 "Put index definitions to `indexes/` directory. Each file must have\n"
 "`.grn` extension such as `indexes.grn`."
-msgstr "インデックス定義は `indexes/` ディレクトリーに入れてください。 `indexes.grn` のように、各ファイルの拡張子は `.grn` としなければいけません。"
+msgstr ""
+"インデックス定義は `indexes/` ディレクトリーに入れてください。 `indexes.grn` のように、各ファイルの拡張子は `.grn` としな"
+"ければいけません。"
 
 #: ../../doc/text/run-regression-test.md:68
 msgid ""
 "You can put index definitions to `schema/` directory. But it is better\n"
 "that put index definitions to `indexes/` directory rather than\n"
 "`schema/` directory. Because it is faster."
-msgstr "インデックス定義は `schema/` ディレクトリーに入れることもできます。しかし、 `schema/` ディレクトリーに入れるよりも、 `indexes/` ディレクトリーに入れる方がよいです。なぜなら `indexes/` ディレクトリーに入れたほうが速いからです。"
+msgstr ""
+"インデックス定義は `schema/` ディレクトリーに入れることもできます。しかし、 `schema/` ディレクトリーに入れるよりも、 `indexes"
+"/` ディレクトリーに入れる方がよいです。なぜなら `indexes/` ディレクトリーに入れたほうが速いからです。"
 
 #: ../../doc/text/run-regression-test.md:72
 msgid ""
 "If you use `indexes/` directory, you can use\n"
 "[offline index construction][]. Offline index construction is 10 times\n"
 "faster than [online index construction][]."
-msgstr "`indexes/` ディレクトリーを使った場合は、[静的インデックス構築][] を使います。静的インデックス構築は [動的インデックス構築][] よりも10倍以上高速です。"
+msgstr ""
+"`indexes/` ディレクトリーを使った場合は、[静的インデックス構築][] を使います。静的インデックス構築は [動的インデックス構築][] よりも1"
+"0倍以上高速です。"
 
 #: ../../doc/text/run-regression-test.md:76
 msgid ""
@@ -1194,7 +1210,9 @@ msgstr ""
 msgid ""
 "Put query logs to `query-logs/` directory. Each file must have `.log`\n"
 "extension such as `query.log`."
-msgstr "クエリーログを `query-logs/` ディレクトリーに置いてください。各ファイルは `query.log` のように拡張子を `.log` にしなければいけません。"
+msgstr ""
+"クエリーログを `query-logs/` ディレクトリーに置いてください。各ファイルは `query.log` のように拡張子を `.log` にしなけれ"
+"ばいけません。"
 
 #: ../../doc/text/run-regression-test.md:96
 msgid "You can put multiple log files like the following:"
@@ -1222,8 +1240,10 @@ msgid ""
 "tation\n"
 "    for details."
 msgstr ""
-"  * Groongaサーバーユーザー向け: `--query-log-path` オプションを使うとクエリーログファイルを作れます。詳細は [groongaコマンド][] のドキュメントを見てください。\n"
-"  * Groonga HTTPDユーザー向け: `groonga_query_log_path` ディレクティブを使うとクエリーログを作れます。詳細は [groonga_query_log_path][] のドキュメントを見てください。"
+"  * Groongaサーバーユーザー向け: `--query-log-path` オプションを使うとクエリーログファイルを作れます。詳細は [groong"
+"aコマンド][] のドキュメントを見てください。\n"
+"  * Groonga HTTPDユーザー向け: `groonga_query_log_path` ディレクティブを使うとクエリーログを作れます。詳細は ["
+"groonga_query_log_path][] のドキュメントを見てください。"
 
 #: ../../doc/text/run-regression-test.md:112
 msgid "### Run"
@@ -1308,7 +1328,9 @@ msgid ""
 "after databases are created. If responses don't have difference, the\n"
 "request isn't a problem. If responses have any difference, the request\n"
 "may be a problem."
-msgstr "データベースを作成したら、クエリーログの中のリクエストを両方のGroongaサーバーへ送ります。もし、レスポンスに違いがなかったらそのリクエストには問題がありません。もし、レスポンスに違いがあれば、そのリクエストには問題があるかもしれません。"
+msgstr ""
+"データベースを作成したら、クエリーログの中のリクエストを両方のGroongaサーバーへ送ります。もし、レスポンスに違いがなかったらそのリクエストには問題があ"
+"りません。もし、レスポンスに違いがあれば、そのリクエストには問題があるかもしれません。"
 
 #: ../../doc/text/run-regression-test.md:155
 msgid ""
@@ -1317,7 +1339,10 @@ msgid ""
 "directory. Test result log file name is the same as input query log\n"
 "file name. If query log file is `query-logs/query-20140508.log`, test\n"
 "result log file is `results/query-20140508.log`."
-msgstr "異なる結果になったリクエストの詳細はテスト結果ログで確認できます。テスト結果ログは `results/` ディレクトリー以下にあります。テスト結果ログファイルのファイル名は入力のクエリーログのファイル名と同じです。もし、クエリーログが `query-logs/query-20140508.log` なら、テスト結果ログのファイル名は `results/query-20140508.log` になります。"
+msgstr ""
+"異なる結果になったリクエストの詳細はテスト結果ログで確認できます。テスト結果ログは `results/` ディレクトリー以下にあります。テスト結果ログファイ"
+"ルのファイル名は入力のクエリーログのファイル名と同じです。もし、クエリーログが `query-logs/query-20140508.log` なら、テスト"
+"結果ログのファイル名は `results/query-20140508.log` になります。"
 
 #: ../../doc/text/run-regression-test.md:161
 msgid "## Advanced usage"
@@ -1361,7 +1386,7 @@ msgstr "## まとめ"
 msgid ""
 "You can run regression test with\n"
 "`groonga-query-log-run-regression-test`. It helps you to upgrade\n"
-"Groonga safely by confirming a new Groonga doesn't have any problem with\n"
+"Groonga safely by confirming a new Groonga doesn't have problem with\n"
 "your data."
 msgstr "`groonga-query-log-run-regression-test` を使えばリグレッションテストができます。自分のデータで新しいGroongaには問題がないことを確認できるので、Groongaを安全にアップグレードするときの役に立ちます。"
 
@@ -1376,10 +1401,14 @@ msgid ""
 "  [groonga_query_log_path]: http://groonga.org/docs/reference/executables/groo"
 "nga-httpd.html#groonga-query-log-path"
 msgstr ""
-"  [動的インデックス構築]: http://groonga.org/ja/docs/reference/indexing.html#online-index-construction\n"
-"  [静的インデックス構築]: http://groonga.org/ja/docs/reference/indexing.html#offline-index-construction\n"
-"  [groongaコマンド]: http://groonga.org/ja/docs/reference/executables/groonga.html\n"
-"  [groonga_query_log_path]: http://groonga.org/ja/docs/reference/executables/groonga-httpd.html#groonga-query-log-path"
+"  [動的インデックス構築]: http://groonga.org/ja/docs/reference/indexing.html#online-inde"
+"x-construction\n"
+"  [静的インデックス構築]: http://groonga.org/ja/docs/reference/indexing.html#offline-ind"
+"ex-construction\n"
+"  [groongaコマンド]: http://groonga.org/ja/docs/reference/executables/groonga.html"
+"\n"
+"  [groonga_query_log_path]: http://groonga.org/ja/docs/reference/executables/g"
+"roonga-httpd.html#groonga-query-log-path"
 
 # Groonga
 #: ../../lib/groonga/query-log/analyzer.rb:3
@@ -2092,31 +2121,3 @@ msgstr ""
 #: ../../lib/groonga/query-log/server-verifier.rb:183
 msgid "a new instance of GroongaOptions"
 msgstr ""
-
-#: ./README.md:9
-#~ msgid ""
-#~ "Groonga-query-log is a collection of libarary and tools to process\n"
-#~ "[groonga](http://groonga.org/)'s query log. You can write a program to\n"
-#~ "process query log by using groonga-query-log as a library. You can\n"
-#~ "analyze your groonga's queries and test with your groonga's query log\n"
-#~ "by using groonga-query-log as a tool."
-#~ msgstr ""
-#~ "groonga-query-logは[groonga](http://groonga.org/ja/)のクエリログを処理するためのライブラリとツール群です。"
-#~ "groonga-query-logをライブラリとして使うことでクエリログを処理するプログラムを書くことができます。ツールとして使うことで、使用しているgro"
-#~ "ongaのクエリを解析したり、クエリログを使ったテストを行うことができます。"
-
-#: ./README.md:23
-#~ msgid "## Examples"
-#~ msgstr "## 例"
-
-#: ./README.md:33
-#~ msgid ""
-#~ "* English: [groonga-talk@lists.sourceforge.net](https://lists.sourceforge.net/"
-#~ "lists/listinfo/groonga-talk)\n"
-#~ "* Japanese: [groonga-dev@lists.sourceforge.jp](http://lists.sourceforge.jp/mai"
-#~ "lman/listinfo/groonga-dev)"
-#~ msgstr ""
-#~ "* 英語: [groonga-talk@lists.sourceforge.net](https://lists.sourceforge.net/lists"
-#~ "/listinfo/groonga-talk)\n"
-#~ "* 日本語: [groonga-dev@lists.sourceforge.jp](http://lists.sourceforge.jp/mailman/"
-#~ "listinfo/groonga-dev)"
