--- a/doc/po/ja.po
+++ b/doc/po/ja.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: groonga-query-log 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2014-05-12 17:06+0900\n"
+"PO-Revision-Date: 2014-11-20 14:38+0900\n"
 "Last-Translator: Haruka Yoshihara <yoshihara@clear-code.com>\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
@@ -1194,7 +1194,7 @@ msgstr ""
 msgid ""
 "It creates new two databases from input data. One is created by the\n"
 "current Groonga. Another is created by the new Groonga."
-msgstr "実行すると、入力データから2つのデータベースを作成します。1つは現在のGroongaで作ります。もう1つは古いGroongaで作ります。"
+msgstr "実行すると、入力データから2つのデータベースを作成します。1つは現在のGroongaで作ります。もう1つは新しいGroongaで作ります。"
 
 msgid ""
 "It starts to send requests in a query log to both Groonga servers\n"
@@ -1215,6 +1215,39 @@ msgstr ""
 "異なる結果になったリクエストの詳細はテスト結果ログで確認できます。テスト結果ログは `results/` ディレクトリー以下にあります。テスト結果ログファイ"
 "ルのファイル名は入力のクエリーログのファイル名と同じです。もし、クエリーログが `query-logs/query-20140508.log` なら、テスト"
 "結果ログのファイル名は `results/query-20140508.log` になります。"
+
+msgid "### Confirm"
+msgstr "### 確認"
+
+msgid ""
+"You can show details of different between the current Groonga and the\n"
+"new Groonga by `groonga-query-log-format-regression-test-logs` command:"
+msgstr ""
+"`groonga-query-log-format-regression-test-logs` コマンドを使うと、現在のGroongaと新しいGroonga"
+"での違いの詳細を確認できます。"
+
+msgid "    % groonga-query-log-format-regression-test-logs results/*.log"
+msgstr ""
+
+msgid "Here is a sample output:"
+msgstr "以下はサンプルの出力例です。"
+
+msgid ""
+"    select Logs\n"
+"    Name: select\n"
+"    Arguments:\n"
+"      table: Logs\n"
+"    --- old\n"
+"    +++ new\n"
+"    @@ -1,4 +1,5 @@\n"
+"    -[[[2],\n"
+"    +[[[3],\n"
+"       [[\"_id\", \"UInt32\"], [\"message\", \"Text\"]],\n"
+"       [1, \"log message1\"],\n"
+"    -  [2, \"log message2\"]]]\n"
+"    +  [2, \"log message2\"],\n"
+"    +  [3, \"log message3\"]]]"
+msgstr ""
 
 msgid "## Advanced usage"
 msgstr "## 高度な使い方"
@@ -1390,12 +1423,12 @@ msgstr ""
 msgid "Returns the value of attribute name"
 msgstr ""
 
-# @return [MixColor]
-msgid "a new instance of MixColor"
-msgstr ""
-
 # Groonga::QueryLog::Analyzer::ConsoleReporter::MixColor#colors
 msgid "Returns the value of attribute colors"
+msgstr ""
+
+# @return [MixColor]
+msgid "a new instance of MixColor"
 msgstr ""
 
 # @return [ConsoleReporter]
@@ -1439,12 +1472,12 @@ msgstr ""
 msgid "Returns the value of attribute last_time"
 msgstr ""
 
-# Groonga::QueryLog::Analyzer::Statistic#context_id
-msgid "Returns the value of attribute context_id"
-msgstr ""
-
 # Groonga::QueryLog::Analyzer::Statistic#raw_command
 msgid "Returns the value of attribute raw_command"
+msgstr ""
+
+# Groonga::QueryLog::Analyzer::Statistic#context_id
+msgid "Returns the value of attribute context_id"
 msgstr ""
 
 # Groonga::QueryLog::Analyzer::Statistic#return_code
@@ -1471,28 +1504,28 @@ msgstr ""
 msgid "the value to set the attribute target_version to."
 msgstr ""
 
-# Groonga::QueryLog::CommandVersionCompatibilityChecker::Options#target_version=
-msgid "Sets the attribute target_version"
-msgstr ""
-
 # Groonga::QueryLog::CommandVersionCompatibilityChecker::Options#target_version
 msgid "Returns the value of attribute target_version"
+msgstr ""
+
+# Groonga::QueryLog::CommandVersionCompatibilityChecker::Options#target_version=
+msgid "Sets the attribute target_version"
 msgstr ""
 
 # @param value
 msgid "the value to set the attribute output_path to."
 msgstr ""
 
-# Groonga::QueryLog::ServerVerifier::Options#output_path=
-msgid "Sets the attribute output_path"
+# @return [Options]
+msgid "a new instance of Options"
 msgstr ""
 
 # Groonga::QueryLog::ServerVerifier::Options#output_path
 msgid "Returns the value of attribute output_path"
 msgstr ""
 
-# @return [Options]
-msgid "a new instance of Options"
+# Groonga::QueryLog::ServerVerifier::Options#output_path=
+msgid "Sets the attribute output_path"
 msgstr ""
 
 # @return [CheckCommandVersionCompatibility]
@@ -1515,13 +1548,6 @@ msgstr ""
 msgid "a new instance of RunRegressionTest"
 msgstr ""
 
-# Groonga::QueryLog::Command::RunRegressionTest::GroongaServer#host
-# Groonga::QueryLog::MemoryLeakDetector::Options#host
-# Groonga::QueryLog::Replayer::Options#host
-# Groonga::QueryLog::ServerVerifier::GroongaOptions#host
-msgid "Returns the value of attribute host"
-msgstr ""
-
 # @return [GroongaServer]
 msgid "a new instance of GroongaServer"
 msgstr ""
@@ -1531,6 +1557,13 @@ msgstr ""
 # Groonga::QueryLog::Replayer::Options#port
 # Groonga::QueryLog::ServerVerifier::GroongaOptions#port
 msgid "Returns the value of attribute port"
+msgstr ""
+
+# Groonga::QueryLog::Command::RunRegressionTest::GroongaServer#host
+# Groonga::QueryLog::MemoryLeakDetector::Options#host
+# Groonga::QueryLog::Replayer::Options#host
+# Groonga::QueryLog::ServerVerifier::GroongaOptions#host
+msgid "Returns the value of attribute host"
 msgstr ""
 
 # @return [Tester]
@@ -1599,12 +1632,12 @@ msgstr ""
 "groonga-query-log-extractに渡すオプション。詳細は\"groonga-query-log-extract --help\"を実行するか#"
 "setup_optionsをご覧ください。"
 
-# Groonga::QueryLog::IncompatibilityDetector#version
-msgid "Returns the value of attribute version"
-msgstr ""
-
 # @return [IncompatibilityDetector]
 msgid "a new instance of IncompatibilityDetector"
+msgstr ""
+
+# Groonga::QueryLog::IncompatibilityDetector#version
+msgid "Returns the value of attribute version"
 msgstr ""
 
 # @return [Version1]
@@ -1633,20 +1666,14 @@ msgstr ""
 msgid "the value to set the attribute port to."
 msgstr ""
 
-# Groonga::QueryLog::MemoryLeakDetector::Options#port=
-# Groonga::QueryLog::Replayer::Options#port=
-# Groonga::QueryLog::ServerVerifier::GroongaOptions#port=
-msgid "Sets the attribute port"
-msgstr ""
-
 # @param value
 msgid "the value to set the attribute protocol to."
 msgstr ""
 
-# Groonga::QueryLog::MemoryLeakDetector::Options#protocol
-# Groonga::QueryLog::Replayer::Options#protocol
-# Groonga::QueryLog::ServerVerifier::GroongaOptions#protocol
-msgid "Returns the value of attribute protocol"
+# Groonga::QueryLog::MemoryLeakDetector::Options#port=
+# Groonga::QueryLog::Replayer::Options#port=
+# Groonga::QueryLog::ServerVerifier::GroongaOptions#port=
+msgid "Sets the attribute port"
 msgstr ""
 
 # @param value
@@ -1657,6 +1684,12 @@ msgstr ""
 # Groonga::QueryLog::Replayer::Options#protocol=
 # Groonga::QueryLog::ServerVerifier::GroongaOptions#protocol=
 msgid "Sets the attribute protocol"
+msgstr ""
+
+# Groonga::QueryLog::MemoryLeakDetector::Options#protocol
+# Groonga::QueryLog::Replayer::Options#protocol
+# Groonga::QueryLog::ServerVerifier::GroongaOptions#protocol
+msgid "Returns the value of attribute protocol"
 msgstr ""
 
 # Groonga::QueryLog::MemoryLeakDetector::Options#pid
